# bazel-grpc-ts-example

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend/: .swcrc  BUILD.bazel  index.ts  package.json  tsconfig.json  webpack.bazel.config.js
client/: BUILD.bazel  index.ts  package.json
frontend/: BUILD.bazel  package.json
proto/: BUILD.bazel  helloworld.proto  helloworld_connect.d.ts  helloworld_pb.d.ts  index.ts  package.json  tsconfig.json  webpack.config.cjs
