####################
#### NPM Config ####
####################
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer", "js_library", "js_run_binary")
load("@aspect_rules_webpack//webpack:defs.bzl", "webpack_bundle", "webpack_devserver")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//backend:__subpackages__"],
)

ts_project(
    name = "backend_ts",
    srcs = ["index.ts"],
    allow_js = True,
    # runtime direct dependencies of the linked npm package
    data = [
        "//proto:ts_hello_world_pb_library",
    ],
    declaration = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    # transpile time direct dependencies
    deps = [
        ":node_modules/@connectrpc/connect",
        ":node_modules/@connectrpc/connect-express",
        ":node_modules/@connectrpc/connect-node",
        ":node_modules/@types/express",
        ":node_modules/express",
        "//proto:ts_hello_world_pb_library",
    ],
)

js_binary(
    name = "backend_server",
    data = [
        ":backend_ts",
    ],
    entry_point = "index.js",
)
